--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -49,10 +49,10 @@
     </div>
 
     <div class="w3-round w3-half w3-container w3-padding">
-        <button onclick="myFunction('Evaluadores')" class="w3-button w3-round w3-block w3-red w3-section w3-padding">
-            Evaluadores
-        </button>
-        <div id="Evaluadores" class="w3-container w3-hide w3-pale-red w3-round">
+        <div class="w3-container w3-red w3-card">
+            <h5>Evaluadores</h5>
+        </div>
+        <div id="Evaluadores" class="w3-container w3-pale-red w3-round">
             <p>
             <ul class="w3-ul w3-light gray w3-round w3-center">
                 {% for eval in evaluadores %}
@@ -80,10 +80,10 @@
     </div>
 
     <div class="w3-round w3-half w3-container w3-padding">
-        <button onclick="myFunction('Grupos')" class="w3-button w3-round w3-block w3-red w3-section w3-padding">
-            Grupos
-        </button>
-        <div id="Grupos" class="w3-container w3-hide w3-pale-red w3-round">
+        <div class="w3-container w3-red w3-card">
+            <h5>Grupos pendientes</h5>
+        </div>
+        <div id="Grupos" class="w3-container w3-pale-red w3-round">
             This is a work in progress.
         </div>
     </div>
