--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -36,3 +36,8 @@ body {font-size:16px;}
 .tabla-elemento-rubrica{
     border: 1px solid #ddd; border-collapse: collapse;
 }
+
+.zoom:hover {
+    transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    cursor:pointer;
+}
