--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -80,13 +80,17 @@
                 <span onclick="document.getElementById('rubrica-detalle').style.display='none'"  class="w3-display-right w3-xlarge w3-text-red opcion" title="Close Modal">
                     <i class="fa fa-window-close" aria-hidden="true"></i></span>
             </div>
-            <div class="w3-container">
-            <label for="new-nombre">Nombre:</label><input type="text"  maxlength="50" required="" id="new-nombre">
-                        <label for="new-descripcion">Descripcion:</label><input type="text"  maxlength="50" required="" id="new-descripcion">
+            <div class="w3-display-container">
+            <div class="w3-container w3-xlarge {% if user|is_admin %} opcion {% endif %}" style="font-weight: bold" {% if user|is_admin %} contenteditable="true" {% endif %}   id='new-nombre'></div>
+            <div id='new-descripcion' class="w3-container {% if user|is_admin %} opcion {% endif %}" style="font-style: italic;" {% if user|is_admin %} contenteditable="true" {% endif %} class="w3-medium "></div>
+            {% if user|is_admin %}
+            <i class="fas fa-edit w3-xxlarge w3-text-red w3-display-left " style="margin-left:20%"></i> 
+            {% else %}
+            <i class="fas fa-align-center w3-xxlarge w3-text-red w3-display-left " style="margin-left:20%"></i>
+            {% endif %}
             </div>
-            <br>
 
-            <table id="tabla-rubrica" class="w3-card-4" style="width: 100%"  >
+            <table id="tabla-rubrica" class="w3-card-4 w3-margin-top" style="width: 100%"  >
               
             </table>
             <div >
@@ -227,11 +231,11 @@ function traerRubrica(){
     for(let i=0; i<rubricasJs.length; i++){
         if(rubricasJs[i][0]==idRubrica){
             nombre=rubricasJs[i][1];
-            descripcion=rubricasJs[i][2];
+            descripcion=rubricasJs[i][2] ;
         }
     }
-    $('#new-nombre').val(nombre);
-    $('#new-descripcion').val(descripcion);
+    $('#new-nombre').html(nombre);
+    $('#new-descripcion').html(descripcion);
     
     $.ajax({
         data : {'id' : idRubrica},
@@ -276,14 +280,20 @@ function añadirColumna(fila){
 
 //quitar columna a la fila correspondiente
 function quitarColumna(fila){
+    if(detalleRubrica[fila].length <= 1){
+        detalleRubrica.splice(fila,1);
+    } else {
     detalleRubrica[fila].pop();
+    }
     jsonToTable(detalleRubrica);
 }
 
 
 //traducir el json a tabla
 function jsonToTable(data){
-    observer.disconnect();
+    observerPuntaje.disconnect();
+    observerDescripcion.disconnect();
+    observerNombreFila.disconnect();
     detalleRubrica=data;
     let html = "<tbody>";
     let mayorColumna = 0;
@@ -327,56 +337,86 @@ function jsonToTable(data){
     }
     head += '</tr></thead>'
     html = head + html;
-    console.log(width);
     $('#mas-menos-filas').css('width',(width*2)+'%');
     $('#tabla-rubrica').html(html);
     $('#rubrica-detalle').show();
     for(let i=0; i<data.length;i++){
         $('#mas-'+i).click(()=>{añadirColumna(i)});
         $('#menos-'+i).click(()=>{quitarColumna(i)});
+        observerNombreFila.observe(document.getElementById('info-'+i),config);
         for(let j=0; j<data[i].length;j++){
-            observer.observe(document.getElementById(i+"__"+j+"-puntaje"),config);
+            observerDescripcion.observe(document.getElementById(i+'__'+j+'-descripcion'),config);
+            observerPuntaje.observe(document.getElementById(i+"__"+j+"-puntaje"),config);
         }
     }
     
 }
 
 
+
 //observador para los elementos de la tabla
 
-var ultimaMutation;
-var lastIdChanged;
+
 // Options for the observer (which mutations to observe)
 var config = {subtree: true , characterData: true};
 
-// Callback function to execute when mutations are observed
-var callback = function(mutationsList, observer) {
-    for(var mutation of mutationsList) {
+// Observadores
+//actualizar fila info
+var observarNombreFila = function(mutationsList,observer){
+    for(let mutation of mutationsList){
+        if(mutation.target.parentNode!=null){
+            let rawData = mutation.target.data;
+            let fila = mutation.target.parentNode.id.split('-')[1];
+            for(let i=0;i<detalleRubrica[fila].length;i++){
+                detalleRubrica[fila][i]['nombreFila']=stripHtml(rawData);
+            }
+        }
+    }
+    
+}
+
+//actualizar descripcion
+var observarDescripcion = function(mutationsList,observer){
+    for(let mutation of mutationsList){
+        if(mutation.target.parentNode!=null){
+            let rawData = mutation.target.data;
+            let position = mutation.target.parentNode.id.split('__');
+            let x = position[0];
+            let y = position[1].split('-')[0];
+            detalleRubrica[x][y]['descripcion'] = stripHtml(rawData);
+            
+        }
+}}
+
+
+
+var observarPuntaje = function(mutationsList, observer) {
+    for(let mutation of mutationsList) {
 
             if(mutation.target.parentNode!=null){
                 let rawData = mutation.target.data;
                 let position = mutation.target.parentNode.id.split("__");
                 let x = position[0];
                 let y = position[1].split("-")[0];
-                detalleRubrica[x][y]['puntaje'] = rawData;
+                detalleRubrica[x][y]['puntaje'] = stripHtml(rawData);
                 actualizarPuntaje();
             }
-            else{
-                console.log("hijo eliminado");
-            }
+        
     }
 };
 
 // Create an observer instance linked to the callback function
-var observer = new MutationObserver(callback);
+var observerPuntaje = new MutationObserver(observarPuntaje);
+var observerNombreFila = new MutationObserver(observarNombreFila);
+var observerDescripcion = new MutationObserver(observarDescripcion);
 
 
 // actualizar puntaje
 function actualizarPuntaje(){
     sumaRubrica=0;
-    let ultimo;
+    let ultimo=0;
     for(let i=0;i<detalleRubrica.length;i++){
-        ultimo = (detalleRubrica[i].length - 1);        
+        ultimo = (detalleRubrica[i].length - 1);      
         sumaRubrica+=parseFloat(detalleRubrica[i][ultimo]['puntaje']);
         }
     $('#puntaje-total').val(sumaRubrica.toFixed(1));
@@ -410,6 +450,7 @@ function sendAspectosRubrica(){
     let newNombre=$('#new-nombre').val();
     let newDescripcion=$('#new-descripcion').val();
     let data={'idRubrica':idRubrica, 'nombre':newNombre, 'descripcion': newDescripcion};
+    /*
     for(let i=0 ; i<detalleRubrica.length; i++){
         infoFila=$('#info-'+i).text();
         for(let j=0; j<detalleRubrica[i].length; j++){
@@ -417,9 +458,8 @@ function sendAspectosRubrica(){
             detalleRubrica[i][j]['descripcion']=$('#'+i+'__'+j+'-descripcion').text();
             
         }
-    }
+    }*/
     data['aspectosRubrica']=detalleRubrica
-    console.log(data);
     xhr.send(JSON.stringify(data));
 }
 </script>
