--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -68,69 +68,69 @@
 
     <!-- Formulario de rubrica -->
     
-    <div id="rubrica-detalle" class="w3-animate-opacity" style="display:none;">
+    <div id="rubrica-detalle" class="w3-modal">
 
         
 
-        <div class="w3-margin-top w3-margin-bottom w3-container w3-center "><br>
+        <div class="w3-modal-content w3-round-large w3-card-4 w3-animate-zoom  " style="width:80%">
 
-
+            <div class="w3-center w3-container">
             
-            <div class="w3-display-container">
-                <span onclick="document.getElementById('rubrica-detalle').style.display='none'"  class="w3-display-right w3-xlarge w3-text-red opcion" title="Close Modal">
-                    <i class="fa fa-window-close" aria-hidden="true"></i></span>
-            </div>
-            <div class="w3-display-container">
-            <div class="w3-container w3-xlarge {% if user|is_admin %} opcion {% endif %}" style="font-weight: bold" {% if user|is_admin %} contenteditable="true" {% endif %}   id='new-nombre'></div>
-            <div id='new-descripcion' class="w3-container {% if user|is_admin %} opcion {% endif %}" style="font-style: italic;" {% if user|is_admin %} contenteditable="true" {% endif %} class="w3-medium "></div>
-            {% if user|is_admin %}
-            <i class="fas fa-edit w3-xxlarge w3-text-red w3-display-left " style="margin-left:20%"></i> 
-            {% else %}
-            <i class="fas fa-align-center w3-xxlarge w3-text-red w3-display-left " style="margin-left:20%"></i>
-            {% endif %}
-            </div>
-
-            <table id="tabla-rubrica" class="w3-card-4 w3-margin-top" style="width: 100%"  >
-              
-            </table>
-            <div >
-                
-                
-                <div class="w3-row w3-margin-top w3-center " >
-                    {% if user|is_admin %}
-                    <div  class="w3-col s6 w3-large">
-                            <div id="mas-menos-filas">
-                                    <i id="mas-filas" class="fas fa-plus-square w3-text-blue-gray zoom"></i>                                
-
-                                    <i id="menos-filas" class="fas fa-minus-square w3-text-red zoom" style="margin-left:5px"> </i> 
-                            </div>
-                                
-                    </div>
-                    {% else %}
-                    <div class="w3-col s6">
-                        <p></p>
-                    </div>  
-                    {% endif %}
-                    <div class="w3-col s6 " >
-                    Puntaje total :  <input style="width: 4ch" id="puntaje-total" type="text" readonly=""></input>
-                    </div>
+                <div class="w3-display-container w3-margin-top" style="height:25px">
+                    <span onclick="document.getElementById('rubrica-detalle').style.display='none'"  class="w3-display-right w3-xxlarge w3-text-red opcion" title="Close Modal">
+                        <i class="fa fa-window-close " aria-hidden="true"></i></span>
                 </div>
-                
-
-            </div>
-          
+                <div class="w3-display-container">
+                <div class="w3-container w3-xlarge {% if user|is_admin %} opcion {% endif %}" style="font-weight: bold" {% if user|is_admin %} contenteditable="true" {% endif %}   id='new-nombre'></div>
+                <div id='new-descripcion' class="w3-container {% if user|is_admin %} opcion {% endif %}" style="font-style: italic;" {% if user|is_admin %} contenteditable="true" {% endif %} class="w3-medium "></div>
                 {% if user|is_admin %}
-                <div class="w3-row w3-margin-top">
-                <div class="w3-col s6 w3-center" >
-                   <p></p>
-                </div>
-                <div class="w3-col s6 w3-center">
-                    <button class="w3-round w3-button  w3-red" style="width:100%" onclick="sendAspectosRubrica()"><i class="far fa-save"></i> Guardar cambios</button>
-                </div>
-            </div>
+                <i class="fas fa-edit w3-xxlarge w3-text-red w3-display-left " style="margin-left:20%"></i> 
+                {% else %}
+                <i class="fas fa-align-center w3-xxlarge w3-text-red w3-display-left " style="margin-left:20%"></i>
                 {% endif %}
+                </div>
 
-        
+                <table id="tabla-rubrica" class="w3-card-4 w3-margin-top" style="width: 100%"  >
+                    
+                </table>
+                <div >
+                    
+                    
+                    <div class="w3-row w3-margin-top w3-margin-bottom w3-center " >
+                        {% if user|is_admin %}
+                        <div  class="w3-col s6 w3-large">
+                                <div id="mas-menos-filas">
+                                        <i id="mas-filas" class="fas fa-plus-square w3-text-blue-gray zoom"></i>                                
+
+                                        <i id="menos-filas" class="fas fa-minus-square w3-text-red zoom" style="margin-left:5px"> </i> 
+                                </div>
+                                    
+                        </div>
+                        {% else %}
+                        <div class="w3-col s6">
+                            <p></p>
+                        </div>  
+                        {% endif %}
+                        <div class="w3-col s6 " >
+                        Puntaje total :  <input style="width: 4ch" id="puntaje-total" type="text" readonly=""></input>
+                        </div>
+                    </div>
+                    
+
+                </div>
+                
+                    {% if user|is_admin %}
+                    <div class="w3-row w3-margin-top w3-margin-bottom">
+                    <div class="w3-col s6 w3-center" >
+                        <p></p>
+                    </div>
+                    <div class="w3-col s6 w3-center">
+                        <button class="w3-round w3-button  w3-red" style="width:100%" onclick="sendAspectosRubrica()"><i class="far fa-save"></i> Guardar cambios</button>
+                    </div>
+                </div>
+                    {% endif %}
+
+        </div>
       </div>
       
     </div>
