--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -48,13 +48,14 @@
         </table>
     </div>
 
+    <!-- Evaluadores -->
     <div class="w3-round w3-half w3-container w3-padding">
         <div class="w3-container w3-red w3-card">
             <h5>Evaluadores</h5>
         </div>
         <div id="Evaluadores" class="w3-container w3-pale-red w3-round">
             <p>
-            <ul class="w3-ul w3-light gray w3-round w3-center">
+            <ul class="w3-ul w3-round w3-center">
                 {% for eval in evaluadores %}
                     <li>
                         {{ eval }}
@@ -79,6 +80,7 @@
         </div>
     </div>
 
+    <!-- Grupos pendientes de evaluar -->
     <div class="w3-round w3-half w3-container w3-padding">
         <div class="w3-container w3-red w3-card">
             <h5>Grupos pendientes</h5>
