--- a/templates/rubrica/rubrica_admin.html
+++ b/templates/rubrica/rubrica_admin.html
@@ -1,6 +1,7 @@
 <!--Rubricas-->
 {% extends 'base.html' %}
 {% load evaluador_privileges %}
+
 {% block content %}
   <!-- Portada -->
   <div class="w3-container" id="portada" style="margin-top:80px; margin-bottom:10px">
@@ -122,7 +123,11 @@
                     {% if user|is_admin %}
                     <div class="w3-row w3-margin-top w3-margin-bottom">
                     <div class="w3-col s6 w3-center" >
-                        <p></p>
+                        <form action="{% url 'evaluaciones:evaluacion' %}" method="post">
+                        {% csrf_token %}
+                        <p><input value='1' name='idEvaluacion' type='text' id='id-evaluacion' style="display:none"></p>
+                        <button type='submit'>Prueba evaluar</button>
+                        </form>
                     </div>
                     <div class="w3-col s6 w3-center">
                         <button class="w3-round w3-button  w3-red" style="width:100%" onclick="sendAspectosRubrica()"><i class="far fa-save"></i> Guardar cambios</button>
@@ -170,7 +175,6 @@
     </div>
 {% endif %}
 
-<!-- Sección de  Funciones js para rubricas -->
 
 <script>
 // Function para buscar rubrica 
@@ -208,6 +212,15 @@ document.getElementById('buscar').addEventListener('keydown',event=>{
     }
 });
 
+for(let i=0; i<rubricasJs.length; i++){
+    $('#'+rubricasJs[i][0]).on('click',traerRubrica);
+}
+
+
+
+<!-- Script encargado de rubricas-->
+
+
 //prepare document for add/remove rows
 $('#mas-filas').click(()=>{añadirFila()});
 $('#menos-filas').click(()=>{quitarFila()});
@@ -218,10 +231,7 @@ $('#menos-filas').click(()=>{quitarFila()});
 var idRubrica;
 var detalleRubrica;
 var sumaRubrica;
-for(let i=0; i<rubricasJs.length; i++){
-    idRubrica=rubricasJs[i][0];
-    $('#'+rubricasJs[i][0]).on('click', traerRubrica);
-}
+
 function traerRubrica(){
 
     idRubrica= $(this).attr("id");
@@ -446,23 +456,16 @@ function sendAspectosRubrica(){
     xhr.setRequestHeader("Content-Type", "application/json");
     xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
     //se actualizan los valores de la tabla al objeto Rubrica (los puntajes ya estan actualizados)
-    let infoFila;
+
     let newNombre=$('#new-nombre').text();
     let newDescripcion=$('#new-descripcion').text();
     let data={'idRubrica':idRubrica, 'nombre':newNombre, 'descripcion': newDescripcion};
-    /*
-    for(let i=0 ; i<detalleRubrica.length; i++){
-        infoFila=$('#info-'+i).text();
-        for(let j=0; j<detalleRubrica[i].length; j++){
-            detalleRubrica[i][j]['nombreFila']=infoFila;
-            detalleRubrica[i][j]['descripcion']=$('#'+i+'__'+j+'-descripcion').text();
-            
-        }
-    }*/
+    
     data['aspectosRubrica']=detalleRubrica
     xhr.send(JSON.stringify(data));
 }
 </script>
 
+<!-- Fin de script de rubricas-->
 {% endblock %}
 
